Fixed buttons on mobile

--- a/src/components/Map.css
+++ b/src/components/Map.css
@@ -14,6 +14,7 @@
   width: 100vw; /* Set the width of the box */
   height: 100vh; /* Set the height of the box */
   display: flex;
+  position: relative;
   justify-content: center;
   align-items: center;
   background-color: white; /* Background color for visibility */
